--- a/package.json
+++ b/package.json
@@ -11,29 +11,31 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@mdxeditor/editor": "^2.12.1",
     "@monaco-editor/react": "^4.6.0",
-    "@tauri-apps/api": "^1",
+    "@tauri-apps/api": "^1.5.3",
     "bootstrap-icons": "^1.11.3",
     "moment": "^2.30.1",
     "monaco-vim": "^0.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-router-dom": "^6.22.3",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
-    "zustand": "^4.5.1"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1",
+    "@tauri-apps/cli": "^1.5.11",
     "@types/moment": "^2.13.0",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "@types/uuid": "^9.0.8",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.0.2",
-    "vite": "^5.0.0"
+    "typescript": "^5.4.2",
+    "vite": "^5.1.5"
   }
 }
