--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "path-all", "fs-write-file", "fs-exists", "fs-create-dir", "fs-read-file", "fs-read-dir", "shell-open"] }
+tauri = { version = "1", features = [ "protocol-asset", "path-all", "fs-write-file", "fs-exists", "fs-create-dir", "fs-read-file", "fs-read-dir", "shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
